--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-fastapi==0.52.0
+click==7.1.1
+fastapi==0.54.0
+h11==0.9.0
+pydantic==1.4
+starlette==0.13.2
 uvicorn==0.11.3
+websockets==8.1
+Jinja2==2.11.2
